// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceTable should get datasources failed should show toast and remove toast normally 1`] = `
<IntlProvider
  locale="en"
>
  <DataSourceTable
    history={
      Object {
        "action": "PUSH",
        "block": [MockFunction],
        "createHref": [MockFunction],
        "createSubHistory": [MockFunction],
        "go": [MockFunction],
        "goBack": [MockFunction],
        "goForward": [MockFunction],
        "length": 1,
        "listen": [MockFunction],
        "location": Object {
          "hash": "",
          "key": undefined,
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [MockFunction],
        "replace": [MockFunction],
      }
    }
    location={Object {}}
    match={Object {}}
  >
    <EuiPageContent
      aria-label="Data Sources"
      data-test-subj="dataSourceTable"
      role="region"
    >
      <EuiPanel
        aria-label="Data Sources"
        className="euiPageContent"
        data-test-subj="dataSourceTable"
        paddingSize="l"
        role="region"
      >
        <div
          aria-label="Data Sources"
          className="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
          data-test-subj="dataSourceTable"
          role="region"
        >
          <EuiFlexGroup
            justifyContent="spaceBetween"
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <EuiFlexItem
                grow={false}
              >
                <div
                  className="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <EuiTitle>
                    <h2
                      className="euiTitle euiTitle--medium"
                    >
                      Data Sources
                    </h2>
                  </EuiTitle>
                  <EuiSpacer
                    size="s"
                  >
                    <div
                      className="euiSpacer euiSpacer--s"
                    />
                  </EuiSpacer>
                  <EuiText>
                    <div
                      className="euiText euiText--medium"
                    >
                      <p>
                        Create and manage the data sources that help you retrieve your data from multiple Elasticsearch clusters
                      </p>
                    </div>
                  </EuiText>
                </div>
              </EuiFlexItem>
              <EuiFlexItem
                grow={false}
              >
                <div
                  className="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <CreateButton
                    history={
                      Object {
                        "action": "PUSH",
                        "block": [MockFunction],
                        "createHref": [MockFunction],
                        "createSubHistory": [MockFunction],
                        "go": [MockFunction],
                        "goBack": [MockFunction],
                        "goForward": [MockFunction],
                        "length": 1,
                        "listen": [MockFunction],
                        "location": Object {
                          "hash": "",
                          "key": undefined,
                          "pathname": "/",
                          "search": "",
                          "state": undefined,
                        },
                        "push": [MockFunction],
                        "replace": [MockFunction],
                      }
                    }
                  >
                    <EuiButton
                      data-test-subj="createDataSourceButton"
                      fill={true}
                      iconType="plusInCircle"
                      onClick={[Function]}
                    >
                      <EuiButtonDisplay
                        baseClassName="euiButton"
                        data-test-subj="createDataSourceButton"
                        disabled={false}
                        element="button"
                        fill={true}
                        iconType="plusInCircle"
                        isDisabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        <button
                          className="euiButton euiButton--primary euiButton--fill"
                          data-test-subj="createDataSourceButton"
                          disabled={false}
                          onClick={[Function]}
                          style={
                            Object {
                              "minWidth": undefined,
                            }
                          }
                          type="button"
                        >
                          <EuiButtonContent
                            className="euiButton__content"
                            iconSide="left"
                            iconType="plusInCircle"
                            textProps={
                              Object {
                                "className": "euiButton__text",
                              }
                            }
                          >
                            <span
                              className="euiButtonContent euiButton__content"
                            >
                              <EuiIcon
                                className="euiButtonContent__icon"
                                color="inherit"
                                size="m"
                                type="plusInCircle"
                              >
                                <span
                                  className="euiButtonContent__icon"
                                  color="inherit"
                                  data-euiicon-type="plusInCircle"
                                  size="m"
                                />
                              </EuiIcon>
                              <span
                                className="euiButton__text"
                              >
                                <FormattedMessage
                                  defaultMessage="Create data source connection"
                                  id="dataSourcesManagement.dataSourcesTable.createBtn"
                                  values={Object {}}
                                >
                                  <span>
                                    Create data source connection
                                  </span>
                                </FormattedMessage>
                              </span>
                            </span>
                          </EuiButtonContent>
                        </button>
                      </EuiButtonDisplay>
                    </EuiButton>
                  </CreateButton>
                </div>
              </EuiFlexItem>
            </div>
          </EuiFlexGroup>
          <EuiSpacer>
            <div
              className="euiSpacer euiSpacer--l"
            />
          </EuiSpacer>
          <EuiInMemoryTable
            allowNeutralSort={false}
            columns={
              Array [
                Object {
                  "dataType": "string",
                  "field": "title",
                  "name": "Datasource",
                  "render": [Function],
                  "sortable": [Function],
                },
                Object {
                  "dataType": "string",
                  "field": "description",
                  "mobileOptions": Object {
                    "show": false,
                  },
                  "name": "Description",
                  "sortable": [Function],
                  "truncateText": true,
                },
              ]
            }
            isSelectable={true}
            itemId="id"
            items={Array []}
            loading={false}
            pagination={
              Object {
                "initialPageSize": 10,
                "pageSizeOptions": Array [
                  5,
                  10,
                  25,
                  50,
                ],
              }
            }
            responsive={true}
            search={
              Object {
                "box": Object {
                  "incremental": true,
                  "schema": Object {
                    "fields": Object {
                      "title": Object {
                        "type": "string",
                      },
                    },
                  },
                },
                "toolsRight": <EuiFlexItem
                  grow={false}
                >
                  <EuiButton
                    color="danger"
                    data-test-subj="deleteDataSourceConnections"
                    disabled={true}
                    iconType="trash"
                    onClick={[Function]}
                  >
                    Delete 
                    
                     connection
                    
                  </EuiButton>
                </EuiFlexItem>,
              }
            }
            selection={
              Object {
                "onSelectionChange": [Function],
              }
            }
            sorting={
              Object {
                "sort": Object {
                  "direction": "asc",
                  "field": "title",
                },
              }
            }
            tableLayout="fixed"
          >
            <div>
              <EuiSearchBar
                box={
                  Object {
                    "incremental": true,
                    "schema": Object {
                      "fields": Object {
                        "title": Object {
                          "type": "string",
                        },
                      },
                    },
                  }
                }
                onChange={[Function]}
                toolsRight={
                  <EuiFlexItem
                    grow={false}
                  >
                    <EuiButton
                      color="danger"
                      data-test-subj="deleteDataSourceConnections"
                      disabled={true}
                      iconType="trash"
                      onClick={[Function]}
                    >
                      Delete 
                      
                       connection
                      
                    </EuiButton>
                  </EuiFlexItem>
                }
              >
                <EuiFlexGroup
                  alignItems="center"
                  gutterSize="m"
                  wrap={true}
                >
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
                  >
                    <EuiFlexItem
                      className="euiSearchBar__searchHolder"
                      grow={true}
                    >
                      <div
                        className="euiFlexItem euiSearchBar__searchHolder"
                      >
                        <EuiSearchBox
                          incremental={true}
                          isInvalid={false}
                          onSearch={[Function]}
                          placeholder="Search..."
                          query=""
                        >
                          <EuiFieldSearch
                            aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
                            compressed={false}
                            defaultValue=""
                            fullWidth={true}
                            incremental={true}
                            inputRef={[Function]}
                            isClearable={true}
                            isInvalid={false}
                            isLoading={false}
                            onSearch={[Function]}
                            placeholder="Search..."
                          >
                            <EuiFormControlLayout
                              compressed={false}
                              fullWidth={true}
                              icon="search"
                              isLoading={false}
                            >
                              <div
                                className="euiFormControlLayout euiFormControlLayout--fullWidth"
                              >
                                <div
                                  className="euiFormControlLayout__childrenWrapper"
                                >
                                  <EuiValidatableControl
                                    isInvalid={false}
                                  >
                                    <input
                                      aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
                                      className="euiFieldSearch euiFieldSearch--fullWidth"
                                      defaultValue=""
                                      onKeyUp={[Function]}
                                      placeholder="Search..."
                                      type="search"
                                    />
                                  </EuiValidatableControl>
                                  <EuiFormControlLayoutIcons
                                    compressed={false}
                                    icon="search"
                                    isLoading={false}
                                  >
                                    <div
                                      className="euiFormControlLayoutIcons"
                                    >
                                      <EuiFormControlLayoutCustomIcon
                                        size="m"
                                        type="search"
                                      >
                                        <span
                                          className="euiFormControlLayoutCustomIcon"
                                        >
                                          <EuiIcon
                                            aria-hidden="true"
                                            className="euiFormControlLayoutCustomIcon__icon"
                                            size="m"
                                            type="search"
                                          >
                                            <span
                                              aria-hidden="true"
                                              className="euiFormControlLayoutCustomIcon__icon"
                                              data-euiicon-type="search"
                                              size="m"
                                            />
                                          </EuiIcon>
                                        </span>
                                      </EuiFormControlLayoutCustomIcon>
                                    </div>
                                  </EuiFormControlLayoutIcons>
                                </div>
                              </div>
                            </EuiFormControlLayout>
                          </EuiFieldSearch>
                        </EuiSearchBox>
                      </div>
                    </EuiFlexItem>
                    <EuiFlexItem
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <EuiFlexItem
                          grow={false}
                          key="delete"
                        >
                          <div
                            className="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <EuiButton
                              color="danger"
                              data-test-subj="deleteDataSourceConnections"
                              disabled={true}
                              iconType="trash"
                              onClick={[Function]}
                            >
                              <EuiButtonDisplay
                                baseClassName="euiButton"
                                color="danger"
                                data-test-subj="deleteDataSourceConnections"
                                disabled={true}
                                element="button"
                                iconType="trash"
                                isDisabled={true}
                                onClick={[Function]}
                                type="button"
                              >
                                <button
                                  className="euiButton euiButton--danger euiButton-isDisabled"
                                  data-test-subj="deleteDataSourceConnections"
                                  disabled={true}
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "minWidth": undefined,
                                    }
                                  }
                                  type="button"
                                >
                                  <EuiButtonContent
                                    className="euiButton__content"
                                    iconSide="left"
                                    iconType="trash"
                                    textProps={
                                      Object {
                                        "className": "euiButton__text",
                                      }
                                    }
                                  >
                                    <span
                                      className="euiButtonContent euiButton__content"
                                    >
                                      <EuiIcon
                                        className="euiButtonContent__icon"
                                        color="inherit"
                                        size="m"
                                        type="trash"
                                      >
                                        <span
                                          className="euiButtonContent__icon"
                                          color="inherit"
                                          data-euiicon-type="trash"
                                          size="m"
                                        />
                                      </EuiIcon>
                                      <span
                                        className="euiButton__text"
                                      >
                                        Delete 
                                         connection
                                      </span>
                                    </span>
                                  </EuiButtonContent>
                                </button>
                              </EuiButtonDisplay>
                            </EuiButton>
                          </div>
                        </EuiFlexItem>
                      </div>
                    </EuiFlexItem>
                  </div>
                </EuiFlexGroup>
              </EuiSearchBar>
              <EuiSpacer
                size="l"
              >
                <div
                  className="euiSpacer euiSpacer--l"
                />
              </EuiSpacer>
              <EuiBasicTable
                columns={
                  Array [
                    Object {
                      "dataType": "string",
                      "field": "title",
                      "name": "Datasource",
                      "render": [Function],
                      "sortable": [Function],
                    },
                    Object {
                      "dataType": "string",
                      "field": "description",
                      "mobileOptions": Object {
                        "show": false,
                      },
                      "name": "Description",
                      "sortable": [Function],
                      "truncateText": true,
                    },
                  ]
                }
                isSelectable={true}
                itemId="id"
                items={Array []}
                loading={false}
                noItemsMessage="No items found"
                onChange={[Function]}
                pagination={
                  Object {
                    "hidePerPageOptions": undefined,
                    "pageIndex": 0,
                    "pageSize": 10,
                    "pageSizeOptions": Array [
                      5,
                      10,
                      25,
                      50,
                    ],
                    "totalItemCount": 0,
                  }
                }
                responsive={true}
                selection={
                  Object {
                    "onSelectionChange": [Function],
                  }
                }
                sorting={
                  Object {
                    "allowNeutralSort": false,
                    "sort": Object {
                      "direction": "asc",
                      "field": "Datasource",
                    },
                  }
                }
                tableLayout="fixed"
              >
                <div
                  className="euiBasicTable"
                >
                  <div>
                    <EuiTableHeaderMobile>
                      <div
                        className="euiTableHeaderMobile"
                      >
                        <EuiFlexGroup
                          alignItems="baseline"
                          justifyContent="spaceBetween"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
                          >
                            <EuiFlexItem
                              grow={false}
                            >
                              <div
                                className="euiFlexItem euiFlexItem--flexGrowZero"
                              >
                                <EuiI18n
                                  default="Select all rows"
                                  token="euiBasicTable.selectAllRows"
                                >
                                  <EuiCheckbox
                                    aria-label="Select all rows"
                                    checked={false}
                                    compressed={false}
                                    disabled={true}
                                    id="_selection_column-checkbox_generated-id"
                                    indeterminate={false}
                                    label="Select all rows"
                                    onChange={[Function]}
                                  >
                                    <div
                                      className="euiCheckbox"
                                    >
                                      <input
                                        aria-label="Select all rows"
                                        checked={false}
                                        className="euiCheckbox__input"
                                        disabled={true}
                                        id="_selection_column-checkbox_generated-id"
                                        onChange={[Function]}
                                        type="checkbox"
                                      />
                                      <div
                                        className="euiCheckbox__square"
                                      />
                                      <label
                                        className="euiCheckbox__label"
                                        htmlFor="_selection_column-checkbox_generated-id"
                                      >
                                        Select all rows
                                      </label>
                                    </div>
                                  </EuiCheckbox>
                                </EuiI18n>
                              </div>
                            </EuiFlexItem>
                            <EuiFlexItem
                              grow={false}
                            >
                              <div
                                className="euiFlexItem euiFlexItem--flexGrowZero"
                              >
                                <EuiTableSortMobile
                                  items={
                                    Array [
                                      Object {
                                        "isSortAscending": true,
                                        "isSorted": true,
                                        "key": "_data_s_title_0",
                                        "name": "Datasource",
                                        "onSort": [Function],
                                      },
                                      Object {
                                        "isSortAscending": undefined,
                                        "isSorted": false,
                                        "key": "_data_s_description_1",
                                        "name": "Description",
                                        "onSort": [Function],
                                      },
                                    ]
                                  }
                                >
                                  <div
                                    className="euiTableSortMobile"
                                  >
                                    <EuiPopover
                                      anchorPosition="downRight"
                                      button={
                                        <EuiButtonEmpty
                                          flush="right"
                                          iconSide="right"
                                          iconType="arrowDown"
                                          onClick={[Function]}
                                          size="xs"
                                        >
                                          <EuiI18n
                                            default="Sorting"
                                            token="euiTableSortMobile.sorting"
                                          />
                                        </EuiButtonEmpty>
                                      }
                                      closePopover={[Function]}
                                      display="inlineBlock"
                                      hasArrow={true}
                                      isOpen={false}
                                      ownFocus={true}
                                      panelPaddingSize="none"
                                    >
                                      <div
                                        className="euiPopover euiPopover--anchorDownRight"
                                      >
                                        <div
                                          className="euiPopover__anchor"
                                        >
                                          <EuiButtonEmpty
                                            flush="right"
                                            iconSide="right"
                                            iconType="arrowDown"
                                            onClick={[Function]}
                                            size="xs"
                                          >
                                            <button
                                              className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                                              disabled={false}
                                              onClick={[Function]}
                                              type="button"
                                            >
                                              <EuiButtonContent
                                                className="euiButtonEmpty__content"
                                                iconSide="right"
                                                iconSize="s"
                                                iconType="arrowDown"
                                                textProps={
                                                  Object {
                                                    "className": "euiButtonEmpty__text",
                                                  }
                                                }
                                              >
                                                <span
                                                  className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                                                >
                                                  <EuiIcon
                                                    className="euiButtonContent__icon"
                                                    color="inherit"
                                                    size="s"
                                                    type="arrowDown"
                                                  >
                                                    <span
                                                      className="euiButtonContent__icon"
                                                      color="inherit"
                                                      data-euiicon-type="arrowDown"
                                                      size="s"
                                                    />
                                                  </EuiIcon>
                                                  <span
                                                    className="euiButtonEmpty__text"
                                                  >
                                                    <EuiI18n
                                                      default="Sorting"
                                                      token="euiTableSortMobile.sorting"
                                                    >
                                                      Sorting
                                                    </EuiI18n>
                                                  </span>
                                                </span>
                                              </EuiButtonContent>
                                            </button>
                                          </EuiButtonEmpty>
                                        </div>
                                      </div>
                                    </EuiPopover>
                                  </div>
                                </EuiTableSortMobile>
                              </div>
                            </EuiFlexItem>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiTableHeaderMobile>
                    <EuiTable
                      id="__table_generated-id"
                      responsive={true}
                      tableLayout="fixed"
                    >
                      <table
                        className="euiTable euiTable--responsive"
                        id="__table_generated-id"
                        tabIndex={-1}
                      >
                        <EuiScreenReaderOnly>
                          <caption
                            className="euiScreenReaderOnly euiTableCaption"
                          >
                            <EuiDelayRender
                              delay={500}
                            />
                          </caption>
                        </EuiScreenReaderOnly>
                        <EuiTableHeader>
                          <thead>
                            <tr>
                              <EuiTableHeaderCellCheckbox
                                key="_selection_column_h"
                              >
                                <th
                                  className="euiTableHeaderCellCheckbox"
                                  scope="col"
                                  style={
                                    Object {
                                      "width": undefined,
                                    }
                                  }
                                >
                                  <div
                                    className="euiTableCellContent"
                                  >
                                    <EuiI18n
                                      default="Select all rows"
                                      token="euiBasicTable.selectAllRows"
                                    >
                                      <EuiCheckbox
                                        aria-label="Select all rows"
                                        checked={false}
                                        compressed={false}
                                        data-test-subj="checkboxSelectAll"
                                        disabled={true}
                                        id="_selection_column-checkbox_generated-id"
                                        indeterminate={false}
                                        label={null}
                                        onChange={[Function]}
                                        type="inList"
                                      >
                                        <div
                                          className="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                                        >
                                          <input
                                            aria-label="Select all rows"
                                            checked={false}
                                            className="euiCheckbox__input"
                                            data-test-subj="checkboxSelectAll"
                                            disabled={true}
                                            id="_selection_column-checkbox_generated-id"
                                            onChange={[Function]}
                                            type="checkbox"
                                          />
                                          <div
                                            className="euiCheckbox__square"
                                          />
                                        </div>
                                      </EuiCheckbox>
                                    </EuiI18n>
                                  </div>
                                </th>
                              </EuiTableHeaderCellCheckbox>
                              <EuiTableHeaderCell
                                align="left"
                                data-test-subj="tableHeaderCell_title_0"
                                isSortAscending={true}
                                isSorted={true}
                                key="_data_h_title_0"
                                onSort={[Function]}
                              >
                                <th
                                  aria-live="polite"
                                  aria-sort="ascending"
                                  className="euiTableHeaderCell"
                                  data-test-subj="tableHeaderCell_title_0"
                                  role="columnheader"
                                  scope="col"
                                  style={
                                    Object {
                                      "width": undefined,
                                    }
                                  }
                                >
                                  <button
                                    className="euiTableHeaderButton euiTableHeaderButton-isSorted"
                                    data-test-subj="tableHeaderSortButton"
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    <CellContents
                                      className="euiTableCellContent"
                                      isSortAscending={true}
                                      isSorted={true}
                                      showSortMsg={true}
                                    >
                                      <span
                                        className="euiTableCellContent"
                                      >
                                        <EuiInnerText>
                                          <EuiI18n
                                            default="{innerText}; {description}"
                                            token="euiTableHeaderCell.titleTextWithDesc"
                                            values={
                                              Object {
                                                "description": undefined,
                                                "innerText": undefined,
                                              }
                                            }
                                          >
                                            <span
                                              className="euiTableCellContent__text"
                                            >
                                              Datasource
                                            </span>
                                          </EuiI18n>
                                        </EuiInnerText>
                                        <EuiIcon
                                          className="euiTableSortIcon"
                                          size="m"
                                          type="sortUp"
                                        >
                                          <span
                                            className="euiTableSortIcon"
                                            data-euiicon-type="sortUp"
                                            size="m"
                                          />
                                        </EuiIcon>
                                      </span>
                                    </CellContents>
                                  </button>
                                </th>
                              </EuiTableHeaderCell>
                              <EuiTableHeaderCell
                                align="left"
                                data-test-subj="tableHeaderCell_description_1"
                                isSorted={false}
                                key="_data_h_description_1"
                                mobileOptions={
                                  Object {
                                    "show": false,
                                  }
                                }
                                onSort={[Function]}
                              >
                                <th
                                  aria-live="polite"
                                  aria-sort="none"
                                  className="euiTableHeaderCell euiTableHeaderCell--hideForMobile"
                                  data-test-subj="tableHeaderCell_description_1"
                                  role="columnheader"
                                  scope="col"
                                  style={
                                    Object {
                                      "width": undefined,
                                    }
                                  }
                                >
                                  <button
                                    className="euiTableHeaderButton"
                                    data-test-subj="tableHeaderSortButton"
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    <CellContents
                                      className="euiTableCellContent"
                                      isSorted={false}
                                      showSortMsg={true}
                                    >
                                      <span
                                        className="euiTableCellContent"
                                      >
                                        <EuiInnerText>
                                          <EuiI18n
                                            default="{innerText}; {description}"
                                            token="euiTableHeaderCell.titleTextWithDesc"
                                            values={
                                              Object {
                                                "description": undefined,
                                                "innerText": undefined,
                                              }
                                            }
                                          >
                                            <span
                                              className="euiTableCellContent__text"
                                            >
                                              Description
                                            </span>
                                          </EuiI18n>
                                        </EuiInnerText>
                                      </span>
                                    </CellContents>
                                  </button>
                                </th>
                              </EuiTableHeaderCell>
                            </tr>
                          </thead>
                        </EuiTableHeader>
                        <EuiTableBody>
                          <tbody>
                            <EuiTableRow>
                              <tr
                                className="euiTableRow"
                              >
                                <EuiTableRowCell
                                  align="center"
                                  colSpan={3}
                                  isMobileFullWidth={true}
                                >
                                  <td
                                    className="euiTableRowCell euiTableRowCell--isMobileFullWidth"
                                    colSpan={3}
                                    style={
                                      Object {
                                        "width": undefined,
                                      }
                                    }
                                  >
                                    <div
                                      className="euiTableCellContent euiTableCellContent--alignCenter"
                                    >
                                      <span
                                        className="euiTableCellContent__text"
                                      >
                                        No items found
                                      </span>
                                    </div>
                                  </td>
                                </EuiTableRowCell>
                              </tr>
                            </EuiTableRow>
                          </tbody>
                        </EuiTableBody>
                      </table>
                    </EuiTable>
                  </div>
                </div>
              </EuiBasicTable>
            </div>
          </EuiInMemoryTable>
        </div>
      </EuiPanel>
    </EuiPageContent>
    <EuiGlobalToastList
      dismissToast={[Function]}
      side="right"
      toastLifeTimeMs={6000}
      toasts={Array []}
    >
      <div
        aria-live="polite"
        className="euiGlobalToastList euiGlobalToastList--right"
        role="region"
      />
    </EuiGlobalToastList>
  </DataSourceTable>
</IntlProvider>
`;

exports[`DataSourceTable should get datasources successful should render normally 1`] = `
<IntlProvider
  locale="en"
>
  <DataSourceTable
    history={
      Object {
        "action": "PUSH",
        "block": [MockFunction],
        "createHref": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "pathname": "alpha-test",
              },
            ],
            Array [
              Object {
                "pathname": "beta-test",
              },
            ],
            Array [
              Object {
                "pathname": "test",
              },
            ],
            Array [
              Object {
                "pathname": "test2",
              },
            ],
            Array [
              Object {
                "pathname": "alpha-test",
              },
            ],
            Array [
              Object {
                "pathname": "beta-test",
              },
            ],
            Array [
              Object {
                "pathname": "test",
              },
            ],
            Array [
              Object {
                "pathname": "test2",
              },
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "createSubHistory": [MockFunction],
        "go": [MockFunction],
        "goBack": [MockFunction],
        "goForward": [MockFunction],
        "length": 1,
        "listen": [MockFunction],
        "location": Object {
          "hash": "",
          "key": undefined,
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [MockFunction],
        "replace": [MockFunction],
      }
    }
    location={Object {}}
    match={Object {}}
  >
    <EuiPageContent
      aria-label="Data Sources"
      data-test-subj="dataSourceTable"
      role="region"
    >
      <EuiPanel
        aria-label="Data Sources"
        className="euiPageContent"
        data-test-subj="dataSourceTable"
        paddingSize="l"
        role="region"
      >
        <div
          aria-label="Data Sources"
          className="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
          data-test-subj="dataSourceTable"
          role="region"
        >
          <EuiFlexGroup
            justifyContent="spaceBetween"
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <EuiFlexItem
                grow={false}
              >
                <div
                  className="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <EuiTitle>
                    <h2
                      className="euiTitle euiTitle--medium"
                    >
                      Data Sources
                    </h2>
                  </EuiTitle>
                  <EuiSpacer
                    size="s"
                  >
                    <div
                      className="euiSpacer euiSpacer--s"
                    />
                  </EuiSpacer>
                  <EuiText>
                    <div
                      className="euiText euiText--medium"
                    >
                      <p>
                        Create and manage the data sources that help you retrieve your data from multiple Elasticsearch clusters
                      </p>
                    </div>
                  </EuiText>
                </div>
              </EuiFlexItem>
              <EuiFlexItem
                grow={false}
              >
                <div
                  className="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <CreateButton
                    history={
                      Object {
                        "action": "PUSH",
                        "block": [MockFunction],
                        "createHref": [MockFunction] {
                          "calls": Array [
                            Array [
                              Object {
                                "pathname": "alpha-test",
                              },
                            ],
                            Array [
                              Object {
                                "pathname": "beta-test",
                              },
                            ],
                            Array [
                              Object {
                                "pathname": "test",
                              },
                            ],
                            Array [
                              Object {
                                "pathname": "test2",
                              },
                            ],
                            Array [
                              Object {
                                "pathname": "alpha-test",
                              },
                            ],
                            Array [
                              Object {
                                "pathname": "beta-test",
                              },
                            ],
                            Array [
                              Object {
                                "pathname": "test",
                              },
                            ],
                            Array [
                              Object {
                                "pathname": "test2",
                              },
                            ],
                          ],
                          "results": Array [
                            Object {
                              "type": "return",
                              "value": undefined,
                            },
                            Object {
                              "type": "return",
                              "value": undefined,
                            },
                            Object {
                              "type": "return",
                              "value": undefined,
                            },
                            Object {
                              "type": "return",
                              "value": undefined,
                            },
                            Object {
                              "type": "return",
                              "value": undefined,
                            },
                            Object {
                              "type": "return",
                              "value": undefined,
                            },
                            Object {
                              "type": "return",
                              "value": undefined,
                            },
                            Object {
                              "type": "return",
                              "value": undefined,
                            },
                          ],
                        },
                        "createSubHistory": [MockFunction],
                        "go": [MockFunction],
                        "goBack": [MockFunction],
                        "goForward": [MockFunction],
                        "length": 1,
                        "listen": [MockFunction],
                        "location": Object {
                          "hash": "",
                          "key": undefined,
                          "pathname": "/",
                          "search": "",
                          "state": undefined,
                        },
                        "push": [MockFunction],
                        "replace": [MockFunction],
                      }
                    }
                  >
                    <EuiButton
                      data-test-subj="createDataSourceButton"
                      fill={true}
                      iconType="plusInCircle"
                      onClick={[Function]}
                    >
                      <EuiButtonDisplay
                        baseClassName="euiButton"
                        data-test-subj="createDataSourceButton"
                        disabled={false}
                        element="button"
                        fill={true}
                        iconType="plusInCircle"
                        isDisabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        <button
                          className="euiButton euiButton--primary euiButton--fill"
                          data-test-subj="createDataSourceButton"
                          disabled={false}
                          onClick={[Function]}
                          style={
                            Object {
                              "minWidth": undefined,
                            }
                          }
                          type="button"
                        >
                          <EuiButtonContent
                            className="euiButton__content"
                            iconSide="left"
                            iconType="plusInCircle"
                            textProps={
                              Object {
                                "className": "euiButton__text",
                              }
                            }
                          >
                            <span
                              className="euiButtonContent euiButton__content"
                            >
                              <EuiIcon
                                className="euiButtonContent__icon"
                                color="inherit"
                                size="m"
                                type="plusInCircle"
                              >
                                <span
                                  className="euiButtonContent__icon"
                                  color="inherit"
                                  data-euiicon-type="plusInCircle"
                                  size="m"
                                />
                              </EuiIcon>
                              <span
                                className="euiButton__text"
                              >
                                <FormattedMessage
                                  defaultMessage="Create data source connection"
                                  id="dataSourcesManagement.dataSourcesTable.createBtn"
                                  values={Object {}}
                                >
                                  <span>
                                    Create data source connection
                                  </span>
                                </FormattedMessage>
                              </span>
                            </span>
                          </EuiButtonContent>
                        </button>
                      </EuiButtonDisplay>
                    </EuiButton>
                  </CreateButton>
                </div>
              </EuiFlexItem>
            </div>
          </EuiFlexGroup>
          <EuiSpacer>
            <div
              className="euiSpacer euiSpacer--l"
            />
          </EuiSpacer>
          <EuiInMemoryTable
            allowNeutralSort={false}
            columns={
              Array [
                Object {
                  "dataType": "string",
                  "field": "title",
                  "name": "Datasource",
                  "render": [Function],
                  "sortable": [Function],
                },
                Object {
                  "dataType": "string",
                  "field": "description",
                  "mobileOptions": Object {
                    "show": false,
                  },
                  "name": "Description",
                  "sortable": [Function],
                  "truncateText": true,
                },
              ]
            }
            isSelectable={true}
            itemId="id"
            items={Array []}
            loading={false}
            pagination={
              Object {
                "initialPageSize": 10,
                "pageSizeOptions": Array [
                  5,
                  10,
                  25,
                  50,
                ],
              }
            }
            responsive={true}
            search={
              Object {
                "box": Object {
                  "incremental": true,
                  "schema": Object {
                    "fields": Object {
                      "title": Object {
                        "type": "string",
                      },
                    },
                  },
                },
                "toolsRight": <EuiFlexItem
                  grow={false}
                >
                  <EuiButton
                    color="danger"
                    data-test-subj="deleteDataSourceConnections"
                    disabled={true}
                    iconType="trash"
                    onClick={[Function]}
                  >
                    Delete 
                    
                     connection
                    
                  </EuiButton>
                </EuiFlexItem>,
              }
            }
            selection={
              Object {
                "onSelectionChange": [Function],
              }
            }
            sorting={
              Object {
                "sort": Object {
                  "direction": "asc",
                  "field": "title",
                },
              }
            }
            tableLayout="fixed"
          >
            <div>
              <EuiSearchBar
                box={
                  Object {
                    "incremental": true,
                    "schema": Object {
                      "fields": Object {
                        "title": Object {
                          "type": "string",
                        },
                      },
                    },
                  }
                }
                onChange={[Function]}
                toolsRight={
                  <EuiFlexItem
                    grow={false}
                  >
                    <EuiButton
                      color="danger"
                      data-test-subj="deleteDataSourceConnections"
                      disabled={true}
                      iconType="trash"
                      onClick={[Function]}
                    >
                      Delete 
                      
                       connection
                      
                    </EuiButton>
                  </EuiFlexItem>
                }
              >
                <EuiFlexGroup
                  alignItems="center"
                  gutterSize="m"
                  wrap={true}
                >
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
                  >
                    <EuiFlexItem
                      className="euiSearchBar__searchHolder"
                      grow={true}
                    >
                      <div
                        className="euiFlexItem euiSearchBar__searchHolder"
                      >
                        <EuiSearchBox
                          incremental={true}
                          isInvalid={false}
                          onSearch={[Function]}
                          placeholder="Search..."
                          query=""
                        >
                          <EuiFieldSearch
                            aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
                            compressed={false}
                            defaultValue=""
                            fullWidth={true}
                            incremental={true}
                            inputRef={[Function]}
                            isClearable={true}
                            isInvalid={false}
                            isLoading={false}
                            onSearch={[Function]}
                            placeholder="Search..."
                          >
                            <EuiFormControlLayout
                              compressed={false}
                              fullWidth={true}
                              icon="search"
                              isLoading={false}
                            >
                              <div
                                className="euiFormControlLayout euiFormControlLayout--fullWidth"
                              >
                                <div
                                  className="euiFormControlLayout__childrenWrapper"
                                >
                                  <EuiValidatableControl
                                    isInvalid={false}
                                  >
                                    <input
                                      aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
                                      className="euiFieldSearch euiFieldSearch--fullWidth"
                                      defaultValue=""
                                      onKeyUp={[Function]}
                                      placeholder="Search..."
                                      type="search"
                                    />
                                  </EuiValidatableControl>
                                  <EuiFormControlLayoutIcons
                                    compressed={false}
                                    icon="search"
                                    isLoading={false}
                                  >
                                    <div
                                      className="euiFormControlLayoutIcons"
                                    >
                                      <EuiFormControlLayoutCustomIcon
                                        size="m"
                                        type="search"
                                      >
                                        <span
                                          className="euiFormControlLayoutCustomIcon"
                                        >
                                          <EuiIcon
                                            aria-hidden="true"
                                            className="euiFormControlLayoutCustomIcon__icon"
                                            size="m"
                                            type="search"
                                          >
                                            <span
                                              aria-hidden="true"
                                              className="euiFormControlLayoutCustomIcon__icon"
                                              data-euiicon-type="search"
                                              size="m"
                                            />
                                          </EuiIcon>
                                        </span>
                                      </EuiFormControlLayoutCustomIcon>
                                    </div>
                                  </EuiFormControlLayoutIcons>
                                </div>
                              </div>
                            </EuiFormControlLayout>
                          </EuiFieldSearch>
                        </EuiSearchBox>
                      </div>
                    </EuiFlexItem>
                    <EuiFlexItem
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <EuiFlexItem
                          grow={false}
                          key="delete"
                        >
                          <div
                            className="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <EuiButton
                              color="danger"
                              data-test-subj="deleteDataSourceConnections"
                              disabled={true}
                              iconType="trash"
                              onClick={[Function]}
                            >
                              <EuiButtonDisplay
                                baseClassName="euiButton"
                                color="danger"
                                data-test-subj="deleteDataSourceConnections"
                                disabled={true}
                                element="button"
                                iconType="trash"
                                isDisabled={true}
                                onClick={[Function]}
                                type="button"
                              >
                                <button
                                  className="euiButton euiButton--danger euiButton-isDisabled"
                                  data-test-subj="deleteDataSourceConnections"
                                  disabled={true}
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "minWidth": undefined,
                                    }
                                  }
                                  type="button"
                                >
                                  <EuiButtonContent
                                    className="euiButton__content"
                                    iconSide="left"
                                    iconType="trash"
                                    textProps={
                                      Object {
                                        "className": "euiButton__text",
                                      }
                                    }
                                  >
                                    <span
                                      className="euiButtonContent euiButton__content"
                                    >
                                      <EuiIcon
                                        className="euiButtonContent__icon"
                                        color="inherit"
                                        size="m"
                                        type="trash"
                                      >
                                        <span
                                          className="euiButtonContent__icon"
                                          color="inherit"
                                          data-euiicon-type="trash"
                                          size="m"
                                        />
                                      </EuiIcon>
                                      <span
                                        className="euiButton__text"
                                      >
                                        Delete 
                                         connection
                                      </span>
                                    </span>
                                  </EuiButtonContent>
                                </button>
                              </EuiButtonDisplay>
                            </EuiButton>
                          </div>
                        </EuiFlexItem>
                      </div>
                    </EuiFlexItem>
                  </div>
                </EuiFlexGroup>
              </EuiSearchBar>
              <EuiSpacer
                size="l"
              >
                <div
                  className="euiSpacer euiSpacer--l"
                />
              </EuiSpacer>
              <EuiBasicTable
                columns={
                  Array [
                    Object {
                      "dataType": "string",
                      "field": "title",
                      "name": "Datasource",
                      "render": [Function],
                      "sortable": [Function],
                    },
                    Object {
                      "dataType": "string",
                      "field": "description",
                      "mobileOptions": Object {
                        "show": false,
                      },
                      "name": "Description",
                      "sortable": [Function],
                      "truncateText": true,
                    },
                  ]
                }
                isSelectable={true}
                itemId="id"
                items={Array []}
                loading={false}
                noItemsMessage="No items found"
                onChange={[Function]}
                pagination={
                  Object {
                    "hidePerPageOptions": undefined,
                    "pageIndex": 0,
                    "pageSize": 10,
                    "pageSizeOptions": Array [
                      5,
                      10,
                      25,
                      50,
                    ],
                    "totalItemCount": 0,
                  }
                }
                responsive={true}
                selection={
                  Object {
                    "onSelectionChange": [Function],
                  }
                }
                sorting={
                  Object {
                    "allowNeutralSort": false,
                    "sort": Object {
                      "direction": "asc",
                      "field": "Datasource",
                    },
                  }
                }
                tableLayout="fixed"
              >
                <div
                  className="euiBasicTable"
                >
                  <div>
                    <EuiTableHeaderMobile>
                      <div
                        className="euiTableHeaderMobile"
                      >
                        <EuiFlexGroup
                          alignItems="baseline"
                          justifyContent="spaceBetween"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
                          >
                            <EuiFlexItem
                              grow={false}
                            >
                              <div
                                className="euiFlexItem euiFlexItem--flexGrowZero"
                              >
                                <EuiI18n
                                  default="Select all rows"
                                  token="euiBasicTable.selectAllRows"
                                >
                                  <EuiCheckbox
                                    aria-label="Select all rows"
                                    checked={false}
                                    compressed={false}
                                    disabled={true}
                                    id="_selection_column-checkbox_generated-id"
                                    indeterminate={false}
                                    label="Select all rows"
                                    onChange={[Function]}
                                  >
                                    <div
                                      className="euiCheckbox"
                                    >
                                      <input
                                        aria-label="Select all rows"
                                        checked={false}
                                        className="euiCheckbox__input"
                                        disabled={true}
                                        id="_selection_column-checkbox_generated-id"
                                        onChange={[Function]}
                                        type="checkbox"
                                      />
                                      <div
                                        className="euiCheckbox__square"
                                      />
                                      <label
                                        className="euiCheckbox__label"
                                        htmlFor="_selection_column-checkbox_generated-id"
                                      >
                                        Select all rows
                                      </label>
                                    </div>
                                  </EuiCheckbox>
                                </EuiI18n>
                              </div>
                            </EuiFlexItem>
                            <EuiFlexItem
                              grow={false}
                            >
                              <div
                                className="euiFlexItem euiFlexItem--flexGrowZero"
                              >
                                <EuiTableSortMobile
                                  items={
                                    Array [
                                      Object {
                                        "isSortAscending": true,
                                        "isSorted": true,
                                        "key": "_data_s_title_0",
                                        "name": "Datasource",
                                        "onSort": [Function],
                                      },
                                      Object {
                                        "isSortAscending": undefined,
                                        "isSorted": false,
                                        "key": "_data_s_description_1",
                                        "name": "Description",
                                        "onSort": [Function],
                                      },
                                    ]
                                  }
                                >
                                  <div
                                    className="euiTableSortMobile"
                                  >
                                    <EuiPopover
                                      anchorPosition="downRight"
                                      button={
                                        <EuiButtonEmpty
                                          flush="right"
                                          iconSide="right"
                                          iconType="arrowDown"
                                          onClick={[Function]}
                                          size="xs"
                                        >
                                          <EuiI18n
                                            default="Sorting"
                                            token="euiTableSortMobile.sorting"
                                          />
                                        </EuiButtonEmpty>
                                      }
                                      closePopover={[Function]}
                                      display="inlineBlock"
                                      hasArrow={true}
                                      isOpen={false}
                                      ownFocus={true}
                                      panelPaddingSize="none"
                                    >
                                      <div
                                        className="euiPopover euiPopover--anchorDownRight"
                                      >
                                        <div
                                          className="euiPopover__anchor"
                                        >
                                          <EuiButtonEmpty
                                            flush="right"
                                            iconSide="right"
                                            iconType="arrowDown"
                                            onClick={[Function]}
                                            size="xs"
                                          >
                                            <button
                                              className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                                              disabled={false}
                                              onClick={[Function]}
                                              type="button"
                                            >
                                              <EuiButtonContent
                                                className="euiButtonEmpty__content"
                                                iconSide="right"
                                                iconSize="s"
                                                iconType="arrowDown"
                                                textProps={
                                                  Object {
                                                    "className": "euiButtonEmpty__text",
                                                  }
                                                }
                                              >
                                                <span
                                                  className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                                                >
                                                  <EuiIcon
                                                    className="euiButtonContent__icon"
                                                    color="inherit"
                                                    size="s"
                                                    type="arrowDown"
                                                  >
                                                    <span
                                                      className="euiButtonContent__icon"
                                                      color="inherit"
                                                      data-euiicon-type="arrowDown"
                                                      size="s"
                                                    />
                                                  </EuiIcon>
                                                  <span
                                                    className="euiButtonEmpty__text"
                                                  >
                                                    <EuiI18n
                                                      default="Sorting"
                                                      token="euiTableSortMobile.sorting"
                                                    >
                                                      Sorting
                                                    </EuiI18n>
                                                  </span>
                                                </span>
                                              </EuiButtonContent>
                                            </button>
                                          </EuiButtonEmpty>
                                        </div>
                                      </div>
                                    </EuiPopover>
                                  </div>
                                </EuiTableSortMobile>
                              </div>
                            </EuiFlexItem>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiTableHeaderMobile>
                    <EuiTable
                      id="__table_generated-id"
                      responsive={true}
                      tableLayout="fixed"
                    >
                      <table
                        className="euiTable euiTable--responsive"
                        id="__table_generated-id"
                        tabIndex={-1}
                      >
                        <EuiScreenReaderOnly>
                          <caption
                            className="euiScreenReaderOnly euiTableCaption"
                          >
                            <EuiDelayRender
                              delay={500}
                            />
                          </caption>
                        </EuiScreenReaderOnly>
                        <EuiTableHeader>
                          <thead>
                            <tr>
                              <EuiTableHeaderCellCheckbox
                                key="_selection_column_h"
                              >
                                <th
                                  className="euiTableHeaderCellCheckbox"
                                  scope="col"
                                  style={
                                    Object {
                                      "width": undefined,
                                    }
                                  }
                                >
                                  <div
                                    className="euiTableCellContent"
                                  >
                                    <EuiI18n
                                      default="Select all rows"
                                      token="euiBasicTable.selectAllRows"
                                    >
                                      <EuiCheckbox
                                        aria-label="Select all rows"
                                        checked={false}
                                        compressed={false}
                                        data-test-subj="checkboxSelectAll"
                                        disabled={true}
                                        id="_selection_column-checkbox_generated-id"
                                        indeterminate={false}
                                        label={null}
                                        onChange={[Function]}
                                        type="inList"
                                      >
                                        <div
                                          className="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                                        >
                                          <input
                                            aria-label="Select all rows"
                                            checked={false}
                                            className="euiCheckbox__input"
                                            data-test-subj="checkboxSelectAll"
                                            disabled={true}
                                            id="_selection_column-checkbox_generated-id"
                                            onChange={[Function]}
                                            type="checkbox"
                                          />
                                          <div
                                            className="euiCheckbox__square"
                                          />
                                        </div>
                                      </EuiCheckbox>
                                    </EuiI18n>
                                  </div>
                                </th>
                              </EuiTableHeaderCellCheckbox>
                              <EuiTableHeaderCell
                                align="left"
                                data-test-subj="tableHeaderCell_title_0"
                                isSortAscending={true}
                                isSorted={true}
                                key="_data_h_title_0"
                                onSort={[Function]}
                              >
                                <th
                                  aria-live="polite"
                                  aria-sort="ascending"
                                  className="euiTableHeaderCell"
                                  data-test-subj="tableHeaderCell_title_0"
                                  role="columnheader"
                                  scope="col"
                                  style={
                                    Object {
                                      "width": undefined,
                                    }
                                  }
                                >
                                  <button
                                    className="euiTableHeaderButton euiTableHeaderButton-isSorted"
                                    data-test-subj="tableHeaderSortButton"
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    <CellContents
                                      className="euiTableCellContent"
                                      isSortAscending={true}
                                      isSorted={true}
                                      showSortMsg={true}
                                    >
                                      <span
                                        className="euiTableCellContent"
                                      >
                                        <EuiInnerText>
                                          <EuiI18n
                                            default="{innerText}; {description}"
                                            token="euiTableHeaderCell.titleTextWithDesc"
                                            values={
                                              Object {
                                                "description": undefined,
                                                "innerText": undefined,
                                              }
                                            }
                                          >
                                            <span
                                              className="euiTableCellContent__text"
                                            >
                                              Datasource
                                            </span>
                                          </EuiI18n>
                                        </EuiInnerText>
                                        <EuiIcon
                                          className="euiTableSortIcon"
                                          size="m"
                                          type="sortUp"
                                        >
                                          <span
                                            className="euiTableSortIcon"
                                            data-euiicon-type="sortUp"
                                            size="m"
                                          />
                                        </EuiIcon>
                                      </span>
                                    </CellContents>
                                  </button>
                                </th>
                              </EuiTableHeaderCell>
                              <EuiTableHeaderCell
                                align="left"
                                data-test-subj="tableHeaderCell_description_1"
                                isSorted={false}
                                key="_data_h_description_1"
                                mobileOptions={
                                  Object {
                                    "show": false,
                                  }
                                }
                                onSort={[Function]}
                              >
                                <th
                                  aria-live="polite"
                                  aria-sort="none"
                                  className="euiTableHeaderCell euiTableHeaderCell--hideForMobile"
                                  data-test-subj="tableHeaderCell_description_1"
                                  role="columnheader"
                                  scope="col"
                                  style={
                                    Object {
                                      "width": undefined,
                                    }
                                  }
                                >
                                  <button
                                    className="euiTableHeaderButton"
                                    data-test-subj="tableHeaderSortButton"
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    <CellContents
                                      className="euiTableCellContent"
                                      isSorted={false}
                                      showSortMsg={true}
                                    >
                                      <span
                                        className="euiTableCellContent"
                                      >
                                        <EuiInnerText>
                                          <EuiI18n
                                            default="{innerText}; {description}"
                                            token="euiTableHeaderCell.titleTextWithDesc"
                                            values={
                                              Object {
                                                "description": undefined,
                                                "innerText": undefined,
                                              }
                                            }
                                          >
                                            <span
                                              className="euiTableCellContent__text"
                                            >
                                              Description
                                            </span>
                                          </EuiI18n>
                                        </EuiInnerText>
                                      </span>
                                    </CellContents>
                                  </button>
                                </th>
                              </EuiTableHeaderCell>
                            </tr>
                          </thead>
                        </EuiTableHeader>
                        <EuiTableBody>
                          <tbody>
                            <EuiTableRow>
                              <tr
                                className="euiTableRow"
                              >
                                <EuiTableRowCell
                                  align="center"
                                  colSpan={3}
                                  isMobileFullWidth={true}
                                >
                                  <td
                                    className="euiTableRowCell euiTableRowCell--isMobileFullWidth"
                                    colSpan={3}
                                    style={
                                      Object {
                                        "width": undefined,
                                      }
                                    }
                                  >
                                    <div
                                      className="euiTableCellContent euiTableCellContent--alignCenter"
                                    >
                                      <span
                                        className="euiTableCellContent__text"
                                      >
                                        No items found
                                      </span>
                                    </div>
                                  </td>
                                </EuiTableRowCell>
                              </tr>
                            </EuiTableRow>
                          </tbody>
                        </EuiTableBody>
                      </table>
                    </EuiTable>
                  </div>
                </div>
              </EuiBasicTable>
            </div>
          </EuiInMemoryTable>
        </div>
      </EuiPanel>
    </EuiPageContent>
    <EuiGlobalToastList
      dismissToast={[Function]}
      side="right"
      toastLifeTimeMs={6000}
      toasts={Array []}
    >
      <div
        aria-live="polite"
        className="euiGlobalToastList euiGlobalToastList--right"
        role="region"
      />
    </EuiGlobalToastList>
  </DataSourceTable>
</IntlProvider>
`;
